--- a/src/styles/partials/components/_colors.scss
+++ b/src/styles/partials/components/_colors.scss
@@ -1,3 +1,6 @@
 $backgroud-color: #f9f9fb; 
 $color-light-blue: rgb(0, 106, 255);
 $color-white: rgb(255, 255, 255);
+$color-blue: #62aef7; 
+$color-deep-blue: #738fc4; 
+$color-link: #0D4599; 
