--- a/src/main.scss
+++ b/src/main.scss
@@ -3,6 +3,7 @@
 @use './styles/partials/pages/header/_header.scss';
 @use './styles/partials/pages/footer/_footer.scss';
 @use './styles/partials/pages/home/_home.scss';
+@use './styles/partials/pages/sell/sell';
 
 
 * {
