--- a/src/main.css
+++ b/src/main.css
@@ -583,16 +583,18 @@
   border-radius: 5px;
 }
 .sell__resources--articles {
+  margin: 3rem 0 0 0;
   text-align: center;
   font-size: 1.2rem;
   font-family: "Rufina";
   color: Black;
+  overflow: hidden;
 }
 .sell__resources--articles h5 {
   font-size: 1rem;
   font-family: "Rufina";
   color: rgba(0, 0, 0, 0.5);
-  margin: 20px 0;
+  margin: 20px 0 50px 0;
 }
 .sell__resources--articles h5 > a {
   display: inline-block;
@@ -611,6 +613,34 @@
 .sell__resources--articles h5 > a:visited:hover {
   color: black;
 }
+.sell__resources--articles-nav {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0;
+  flex-flow: column nowrap;
+}
+.sell__resources--articles-nav-list {
+  position: absolute;
+  top: 0;
+}
+.sell__resources--articles-nav-list-item {
+  cursor: pointer;
+  display: inline;
+  padding: 1.5rem;
+  border: none;
+}
+.sell__resources--articles-nav-list-item:active {
+  border-bottom: 4px solid rgb(0, 106, 255);
+}
+.sell__resources--articles-nav-list .inline {
+  width: 100%;
+  height: 1px;
+  background-color: black;
+  margin: 1.7rem 0 0 0;
+}
 .sell__resources--articles-container {
   display: flex;
   justify-content: center;
@@ -618,7 +648,8 @@
   gap: 20px;
   flex-flow: row nowrap;
   width: 98vw;
-  overflow: hidden;
+  margin: 5rem 0 0 0;
+  position: relative;
 }
 .sell__resources--articles-container-card {
   width: 280px;
@@ -632,7 +663,8 @@
 .sell__resources--articles-container-card img {
   width: 100%;
 }
-.sell__resources--articles-container-card h4, .sell__resources--articles-container-card p {
+.sell__resources--articles-container-card h4,
+.sell__resources--articles-container-card p {
   padding: 1rem;
   font-size: 1rem;
   font-family: "Open Sans";
