--- a/src/styles/partials/components/_colors.scss
+++ b/src/styles/partials/components/_colors.scss
@@ -4,3 +4,4 @@ $color-white: rgb(255, 255, 255);
 $color-blue: #62aef7; 
 $color-deep-blue: #738fc4; 
 $color-link: #0D4599; 
+$color-button: #006aff; 
