--- a/src/main.scss
+++ b/src/main.scss
@@ -4,6 +4,7 @@
 @use './styles/partials/pages/footer/_footer.scss';
 @use './styles/partials/pages/home/_home.scss';
 @use './styles/partials/pages/sell/sell';
+@use './styles/partials/pages/sign-in/signIn.scss';
 
 
 * {
