completed the map section, also the api didnt work. but i added some dummy information as a normal js file. problems solving the arrow pionting to the same directoin as the usestate but will work on that tomorrow. didnt finish the header of the buy amd rent.

--- a/src/main.scss
+++ b/src/main.scss
@@ -5,6 +5,8 @@
 @use './styles/partials/pages/home/_home.scss';
 @use './styles/partials/pages/sell/sell';
 @use './styles/partials/pages/sign-in/signIn.scss';
+@use './styles/partials/pages/buy/buy.scss';
+
 
 
 * {
