--- a/src/styles/partials/pages/buy/buy.scss
+++ b/src/styles/partials/pages/buy/buy.scss
@@ -2,3 +2,42 @@
 @use '../../../partials/components/colors'as color;
 @use '../../../partials/components/fonts'as font;
 
+  .buy{
+    padding: 100px 0 0 0;
+  &__content{
+    @include mixin.dflex(center, center, .3em, row, wrap); 
+
+    &--product{
+      width: 50%;
+      max-height: 100vh;
+      border: 2px solid black;
+      box-shadow: 0 0 10px 3px black;
+      display: grid;
+      padding: 20px;
+      grid-template-columns: repeat(2, 1fr);
+      overflow-y: scroll;
+      overflow-x: hidden;
+      gap: .5rem;
+
+      &-card{ 
+        width: 100%;
+        border: 1px solid black;
+        box-shadow: 0 0 5px 1px lightgray;
+        margin: .5rem;
+        border-radius: 10px;
+
+        &:hover{
+          box-shadow: 0 0 5px 2px lightgray;
+          cursor: pointer;
+        }
+        img{
+          width: 100%;
+          max-height: 70%;
+        }
+        &-info{
+          padding: .4rem 1rem;
+        }
+      }
+    }
+  }
+}
