--- a/src/main.css
+++ b/src/main.css
@@ -813,6 +813,47 @@
   display: block;
 }
 
+.buy {
+  padding: 100px 0 0 0;
+}
+.buy__content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.3em;
+  flex-flow: row wrap;
+}
+.buy__content--product {
+  width: 50%;
+  max-height: 100vh;
+  border: 2px solid black;
+  box-shadow: 0 0 10px 3px black;
+  display: grid;
+  padding: 20px;
+  grid-template-columns: repeat(2, 1fr);
+  overflow-y: scroll;
+  overflow-x: hidden;
+  gap: 0.5rem;
+}
+.buy__content--product-card {
+  width: 100%;
+  border: 1px solid black;
+  box-shadow: 0 0 5px 1px lightgray;
+  margin: 0.5rem;
+  border-radius: 10px;
+}
+.buy__content--product-card:hover {
+  box-shadow: 0 0 5px 2px lightgray;
+  cursor: pointer;
+}
+.buy__content--product-card img {
+  width: 100%;
+  max-height: 70%;
+}
+.buy__content--product-card-info {
+  padding: 0.4rem 1rem;
+}
+
 * {
   margin: 0;
   padding: 0;
