--- a/src/main.scss
+++ b/src/main.scss
@@ -6,6 +6,7 @@
 @use './styles/partials/pages/sell/sell';
 @use './styles/partials/pages/sign-in/signIn.scss';
 @use './styles/partials/pages/buy/buy.scss';
+@use './styles/partials/pages/loans/loans.scss';
 
 
 
