--- a/src/main.css
+++ b/src/main.css
@@ -1237,6 +1237,138 @@
   display: block;
 }
 
+.advertise {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0;
+  flex-flow: column nowrap;
+  min-height: 100vh;
+  width: 100%;
+  padding: 100px 0 0 0;
+  background-color: #f9f9fb;
+}
+.advertise__info {
+  text-align: center;
+}
+.advertise__info h1 {
+  font-size: 3rem;
+  font-family: "Rufina";
+  color: black;
+}
+.advertise__info h4 {
+  font-size: 1rem;
+  font-family: "Rufina";
+  color: rgb(0, 0, 0);
+  font-weight: 500;
+  margin: 30px 0 0 0;
+}
+.advertise__info .inline {
+  margin: 20px auto 30px auto;
+  height: 2px;
+  width: 24rem;
+  background: orange;
+}
+.advertise__info h3 {
+  font-size: 1.5rem;
+  font-family: "Open Sans";
+  color: rgb(0, 0, 0);
+}
+.advertise__container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  margin: 80px 0 0 0;
+  padding: 100px;
+}
+.advertise__container img {
+  width: 100%;
+}
+.advertise__container--card {
+  margin: 10px 0;
+  border: 1px solid rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
+}
+.advertise__container--card:hover {
+  cursor: pointer;
+}
+.advertise__container--card > div {
+  height: 150px;
+  padding: 20px;
+  background-color: white;
+  text-align: center;
+}
+.advertise__container--card > div button {
+  padding: 15px 40px;
+  border: none;
+  outline: none;
+  color: white;
+  margin: 20px 0 0 0;
+  background-color: #006aff;
+  font-size: 1.2rem;
+  font-family: "Open Sans";
+  border-radius: 5px;
+  transition: all 200ms ease-in-out;
+}
+.advertise__container--card > div button:hover {
+  cursor: pointer;
+  background: #0D4599;
+}
+.advertise__target {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  flex-flow: column nowrap;
+  margin: 50px 0 100px 0;
+  padding: 100px;
+}
+.advertise__target img {
+  width: 100%;
+}
+.advertise__audience {
+  width: 100%;
+  height: 700px;
+  background-color: #001751;
+  color: white;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  flex-flow: column nowrap;
+}
+.advertise__audience h1 {
+  font-size: 1.4rem;
+  font-family: "Open Sans";
+  color: white;
+  text-align: center;
+}
+.advertise__audience > div {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  gap: 20px;
+  flex-flow: row nowrap;
+  width: 80%;
+}
+.advertise__audience > div > div {
+  max-width: 300px;
+  text-align: center;
+  font-size: 1rem;
+  font-family: "Open Sans";
+  color: white;
+}
+.advertise__audience > div > div h3 {
+  margin: 10px 0 20px 0;
+}
+.advertise__audience > p {
+  width: 700px;
+  font-size: 0.8rem;
+  margin: 30px 0 0 0;
+  text-align: center;
+}
+
 * {
   margin: 0;
   padding: 0;
