--- a/src/main.scss
+++ b/src/main.scss
@@ -7,6 +7,7 @@
 @use './styles/partials/pages/sign-in/signIn.scss';
 @use './styles/partials/pages/buy/buy.scss';
 @use './styles/partials/pages/loans/loans.scss';
+@use './styles/partials/pages/inattendu/_advertise.scss';
 
 
 
